--- a/android-whereyougo/res/layout/layout_guiding_screen.xml
+++ b/android-whereyougo/res/layout/layout_guiding_screen.xml
@@ -1,42 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/linearLayoutMain"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" 
-	android:background="@drawable/var_custom_screen_bg">
-	
-	<LinearLayout
-	    android:id="@+id/linearLayoutCompass"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:layout_above="@+id/linear_layout_bottom"
-	    android:gravity="center"
-	    android:orientation="vertical" >
+	android:background="@drawable/var_custom_screen_bg"
+    android:orientation="vertical" >
 
-	</LinearLayout>
-	
-	<LinearLayout 
-		android:id="@+id/linearLayoutTopCoordinates"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		android:padding="3dip">
-		<TextView
-			style="@style/CustomScreenTextValue"
-			android:id="@+id/textViewLatitude"
-			android:layout_width="wrap_content"
-			android:gravity="left" />
-		<View 
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:layout_weight="1" />
-		<TextView
-			style="@style/CustomScreenTextValue"
-			android:id="@+id/textViewLongitude"
-			android:layout_width="wrap_content"
-			android:gravity="right" />
-	</LinearLayout>
-	
 	<LinearLayout 
 		android:layout_below="@+id/linearLayoutTopCoordinates"
 		android:layout_width="fill_parent"
@@ -60,7 +30,73 @@
 	</LinearLayout>
 	
 	<LinearLayout 
-		android:id="@+id/linear_layout_bottom"
+		android:id="@+id/linearLayoutTopCoordinates"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" 
+		android:padding="3dip">
+		
+		<TextView
+			style="@style/CustomScreenTextValue"
+			android:id="@+id/textViewLatitude"
+			android:layout_width="wrap_content"
+			android:gravity="left" />
+		<View 
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_weight="1" />
+		<TextView
+			style="@style/CustomScreenTextValue"
+			android:id="@+id/textViewLongitude"
+			android:layout_width="wrap_content"
+			android:gravity="right" />
+	</LinearLayout>
+		
+	<LinearLayout 
+		android:layout_below="@+id/linearLayoutTopCoordinates2"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:paddingLeft="3dip"
+		android:paddingRight="3dip" >
+		<TextView
+			style="@style/CustomScreenTextTitle"
+			android:layout_width="fill_parent"
+			android:gravity="center"
+			android:text="Destination" />
+	</LinearLayout>		
+	
+	<LinearLayout 
+		android:id="@+id/linearLayoutTopDestination"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" 
+		android:padding="3dip">
+		
+		<TextView
+			style="@style/CustomScreenTextValue"
+			android:id="@+id/textViewDestination"
+			android:layout_width="fill_parent"
+			android:gravity="center"
+			android:text="Navigation Ziel" />
+	</LinearLayout>
+		
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dip"
+        android:layout_weight="1" >
+
+	    <LinearLayout
+	        android:id="@+id/linearLayoutCompass"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"	       
+	        android:gravity="center"
+	        android:orientation="vertical" >
+	    </LinearLayout>        
+  
+    </RelativeLayout>	
+	
+
+    
+	<LinearLayout 
+		android:id="@+id/linear_layout_bottom1"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_above="@+id/linear_layout_bottom_2">
@@ -104,4 +140,6 @@
 				android:id="@+id/text_view_time_to_target" />
 		</LinearLayout>
 	</LinearLayout>
-</RelativeLayout>
+	
+	<include layout="@layout/include_bottom_panel" />
+</LinearLayout>
