--- a/yaawp/res/layout/list_adapter_hint.xml
+++ b/yaawp/res/layout/list_adapter_hint.xml
@@ -5,40 +5,81 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="40dip"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="4dip" >
- 
-    <!-- 
-	<ImageView
-		android:id="@+id/layoutIconedListAdapterImageView01"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:layout_marginRight="6dip"
-		android:scaleType="fitCenter" 
-		android:gravity="center_vertical"/>-->
 
-	<LinearLayout
-		android:id="@+id/linear_layout_content"
-		android:layout_width="0dp"
-		android:layout_weight="1"
+	<LinearLayout 
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical">
+		android:paddingLeft="3dip"
+		android:paddingRight="3dip"
+		android:orientation="horizontal" >
+			<TextView
+				style="@style/TextStyle18" 
+				android:id="@+id/layoutIconedListAdapterTextView01"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:lines="1" />
 		
-		<TextView
-			style="@style/TextStyle18" 
-			android:id="@+id/layoutIconedListAdapterTextView01"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:lines="1" />
-		<TextView
-			style="@style/TextStyle12"
-			android:id="@+id/layoutIconedListAdapterTextView02"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:ellipsize="none" />
-		
-		<include layout="@layout/include_bottom_panel" />
+			<ImageView
+			    android:id="@+id/layoutIconedListAdapterImageView01"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="top"
+			    android:layout_weight="1"
+			    android:gravity="center_vertical"
+			    android:scaleType="fitStart"
+			    android:src="@android:drawable/ic_menu_close_clear_cancel" />
+ 
 	</LinearLayout>
+	<LinearLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:paddingLeft="3dip"
+		android:paddingRight="3dip"
+		android:orientation="horizontal" >
+			<TextView
+				style="@style/TextStyle12"
+				android:id="@+id/layoutIconedListAdapterTextView02"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:ellipsize="none" />
+		</LinearLayout> 
+		
+		
+		<include layout="@layout/include_bottom_panel" />						    
+    <!-- 
+	<LinearLayout
+	    android:id="@+id/linear_layout_content"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	     >
+		
+	 <LinearLayout
+			android:id="@+id/linear_layout_content2"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+		
+
+					    	    
+	  </LinearLayout> 
+-->
+<!-- 
+		<LinearLayout
+			android:id="@+id/linear_layout_content3"
+			android:layout_weight="1"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">		
+		
+
+			
+
+		-->
+		
+<!-- 	</LinearLayout>-->
 	
 	<!-- 
 	<ImageView
