--- a/yaawp/res/layout/iconed_list_adapter.xml
+++ b/yaawp/res/layout/iconed_list_adapter.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/linear_layout_main"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
+	android:gravity="center_vertical"
 	android:minHeight="40dip"
-	android:padding="4dip"
-	android:gravity="center_vertical">
+	android:padding="4dip" >
  
 	<ImageView
 		android:id="@+id/layoutIconedListAdapterImageView01"
