--- a/yaawp/res/layout/layout_main.xml
+++ b/yaawp/res/layout/layout_main.xml
@@ -25,6 +25,9 @@
 		    android:layout_height="fill_parent"
 		    android:textFilterEnabled="false" >
 
+		    <!--  		    
+		      android:divider="#FFCC00"
+    android:dividerHeight="4dp"  - only for list elements which return true at isEnabled() -->
 		</ListView>
 
 	</LinearLayout>	
