--- a/yaawp/res/layout/layout_main.xml
+++ b/yaawp/res/layout/layout_main.xml
@@ -2,34 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
+    android:background="#FFDDDDDD"
     android:orientation="vertical" >
 
-	<LinearLayout style="@style/PanelTopMain">
-		<ImageButton
-			android:id="@+id/button_logo"
-			style="@style/PanelButton"
-            android:src="@drawable/ic_title_logo" />
-            
-        <ImageView style="@style/SeparatorVertical" />
-		<TextView style="@style/TitleText" />
-    </LinearLayout>
-
-	<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"	    
-	     style="@style/MainScreenLine">
+	<RelativeLayout android:id="@+id/contentarea"
+		android:layout_width="fill_parent"
+		android:layout_height="0dp"
+		android:background="#00000000"
+		android:layout_weight="1" >
 
 		<ListView
 		    android:id="@+id/listView1"
 		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-		    android:textFilterEnabled="false" >
-
-		    <!--  		    
-		      android:divider="#FFCC00"
-    android:dividerHeight="4dp"  - only for list elements which return true at isEnabled() -->
+		    android:layout_height="fill_parent" >
 		</ListView>
 
-	</LinearLayout>	
-	
+	</RelativeLayout>	
+
+	<include layout="@layout/include_bottom_panel" />		
 </LinearLayout>
