--- a/yaawp/res/layout/list_separator.xml
+++ b/yaawp/res/layout/list_separator.xml
@@ -5,34 +5,56 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="20dip"
-    android:orientation="horizontal"
-    android:padding="4dip" >
+    android:background="#ff999999"
+android:padding="4dip"  
+    android:orientation="vertical" >
+
+	<!-- <LinearLayout
+    	android:id="@+id/upper_ruler"
+		android:layout_width="fill_parent"
+		android:layout_height="2dp"
+		android:background="#ff777777"
+		android:orientation="horizontal" /> -->
+	
+	<LinearLayout
+	    android:id="@+id/textarea"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:background="#00000000"
+	    android:orientation="horizontal" >
+
+		<TextView
+			android:id="@+id/linearLayoutSeparatorHeadline"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:gravity="left"
+			android:lines="1"
+			android:text="Left"
+			android:textColor="#ff333333"
+			android:textSize="18sp"
+			android:textStyle="bold" />
+
+		<TextView
+			android:id="@+id/linearLayoutSeparatorHeadline2"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="0"
+			android:gravity="right"
+			android:lines="1"
+			android:text="Right"
+			android:textColor="#ff333333"
+			android:textSize="18dp" />	    
+	    		
+	</LinearLayout>	
 		
-    <LinearLayout style="@style/CustomScreenBottomInfo" >
-
- 			<TextView
-				style="@style/TextStyle18" 
-				android:id="@+id/linearLayoutSeparatorHeadline"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:lines="1"
-				android:layout_weight="1"
-				android:gravity="left"/>
-
-        </LinearLayout>
-
-        <LinearLayout style="@style/CustomScreenBottomInfo" >
-
-			<TextView
-				style="@style/TextStyle18" 
-				android:id="@+id/linearLayoutSeparatorHeadline2"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:lines="1"
-				android:layout_weight="1" 
-				android:gravity="right"/>
-
-        </LinearLayout>
+	<!--  <LinearLayout
+    	android:id="@+id/lower_ruler"
+		android:layout_width="fill_parent"
+		android:layout_height="2dp"
+		android:background="#ff777777"
+		android:orientation="horizontal" /> -->
+    		
 
         
 </LinearLayout>    
