--- a/yaawp/res/layout/layout_main.xml
+++ b/yaawp/res/layout/layout_main.xml
@@ -5,19 +5,11 @@
     android:background="#FFDDDDDD"
     android:orientation="vertical" >
 
-	<RelativeLayout android:id="@+id/contentarea"
+	<RelativeLayout android:id="@+id/relative_layout_content"
 		android:layout_width="fill_parent"
 		android:layout_height="0dp"
 		android:background="#00000000"
-		android:layout_weight="1" >
-
-		<ListView
-		    android:id="@+id/listView1"
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent" >
-		</ListView>
-
-	</RelativeLayout>	
+		android:layout_weight="1" />
 
 	<include layout="@layout/include_bottom_panel" />		
 </LinearLayout>
