--- a/yaawp/res/layout/list_separator.xml
+++ b/yaawp/res/layout/list_separator.xml
@@ -15,7 +15,17 @@
 	    android:layout_height="wrap_content"
 	    android:background="#00000000"
 	    android:orientation="horizontal" >
-
+	
+		<ImageView
+		    android:id="@+id/image_left"
+		    android:layout_width="wrap_content"
+		    android:layout_height="fill_parent"
+		    android:layout_marginRight="6dip"
+		    android:layout_weight="0"
+		    android:gravity="left"
+		    android:scaleType="fitCenter"
+		    android:src="@drawable/ic_cancel" />
+	    
 		<TextView
 			android:id="@+id/linearLayoutSeparatorHeadline"
 			android:layout_width="match_parent"
