--- a/yaawp/res/layout/include_bottom_panel.xml
+++ b/yaawp/res/layout/include_bottom_panel.xml
@@ -9,7 +9,8 @@
     android:paddingBottom="4dip"
     android:paddingLeft="4dip"
     android:paddingRight="4dip"
-    android:paddingTop="6dip" >
+    android:paddingTop="6dip"
+    android:visibility="gone" >
 
     <LinearLayout
         android:id="@+id/linear_layout_left_spacer"
