--- a/yaawp/res/layout/list_adapter_hint.xml
+++ b/yaawp/res/layout/list_adapter_hint.xml
@@ -6,6 +6,7 @@
     android:gravity="center_vertical"
     android:minHeight="40dip"
     android:orientation="horizontal"
+    android:background="#FFDDDDDD"
     android:padding="4dip" >
 
 	<ImageView
@@ -30,13 +31,18 @@
 			android:paddingLeft="3dip"
 			android:paddingRight="3dip"
 			android:orientation="horizontal" >
+			
 				<TextView
-					style="@style/TextStyle18" 
 					android:id="@+id/layoutIconedListAdapterTextView01"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
-					android:lines="1" />
+					android:lines="1"
+					android:ellipsize="end"
+		    		android:textColor="#ff333333"
+		    		android:background="#00000000"
+		    		android:textSize="18sp"
+		    		android:textStyle="bold"/>
 			
 				<ImageView
 				    android:id="@+id/layoutIconedListAdapterImageView01"
@@ -56,11 +62,13 @@
 			android:paddingRight="3dip"
 			android:orientation="horizontal" >
 				<TextView
-					style="@style/TextStyle12"
 					android:id="@+id/layoutIconedListAdapterTextView02"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:ellipsize="none" />
+					android:ellipsize="none"
+		   			android:background="#00000000"
+		    		android:textColor="#ff555555"
+		    		android:textSize="12sp" />
 		</LinearLayout> 
 			
 			
