--- a/yaawp/res/layout/listitem_cartridge.xml
+++ b/yaawp/res/layout/listitem_cartridge.xml
@@ -31,8 +31,7 @@
 		    android:ellipsize="end"
 		    android:lines="1"
 		    android:textColor="#ff333333"
-		    android:textSize="18sp"
-		    android:textStyle="bold" />
+		    android:textSize="18sp" />
 
 		<TextView android:id="@+id/layoutIconedListAdapterTextView02"
 		    android:layout_width="fill_parent"
