--- a/yaawp/res/layout/list_adapter_hint.xml
+++ b/yaawp/res/layout/list_adapter_hint.xml
@@ -18,11 +18,84 @@
  		android:gravity="center_vertical"
  		android:scaleType="fitStart"
  		android:src="@drawable/ic_launcher" />
+
+	<LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	    android:paddingLeft="3dip"
+	    android:paddingRight="3dip"
+	    android:orientation="vertical" >
+
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal" >
+
+			<TextView
+			    android:id="@+id/layoutIconedListAdapterTextView01"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="1"
+			   	android:lines="1"
+				android:ellipsize="end"
+		    	android:textColor="#ff333333"
+		    	android:background="#00000000"
+		    	android:textSize="18sp"
+		    	android:textStyle="bold" 
+			    android:text="TextView" />
+
+			<ImageView
+			    android:id="@+id/layoutIconedListAdapterImageView01"
+			    android:layout_width="20dp"
+			    android:layout_height="20dp"
+			    android:layout_weight="0"
+			    android:maxHeight="20dp"
+			    android:maxWidth="20dp"
+			    android:scaleType="fitCenter"
+			    android:src="@android:drawable/ic_menu_close_clear_cancel" />
+
+		</LinearLayout>
+
+		<TextView
+		    android:id="@+id/layoutIconedListAdapterTextView02"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:ellipsize="none"
+		   	android:background="#00000000"
+		    android:textColor="#ff555555"
+		    android:textSize="12sp"
+		    android:text="TextView" />
+		
+		<include layout="@layout/include_bottom_panel" />
+	</LinearLayout>
+	
+ 	<ImageView
+ 		android:id="@+id/image_rightside"
+ 		android:layout_width="wrap_content"
+ 		android:layout_height="wrap_content"
+ 		android:layout_gravity="top"
+ 		android:layout_weight="0"
+ 		android:gravity="center_vertical"
+ 		android:scaleType="fitStart"
+ 		android:src="@drawable/ic_launcher" />    
+    
+ 	<!--     
+	<ImageView
+ 		android:id="@+id/image_leftside"
+ 		android:layout_width="wrap_content"
+ 		android:layout_height="wrap_content"
+ 		android:layout_gravity="top"
+ 		android:layout_weight="0"
+ 		android:gravity="center_vertical"
+ 		android:scaleType="fitStart"
+ 		android:src="@drawable/ic_launcher" />
     
     <LinearLayout
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"        
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_weight="0" >
         
  
 		<LinearLayout 
@@ -74,50 +147,17 @@
 			
 		<include layout="@layout/include_bottom_panel" />	
 	</LinearLayout>						    
-    <!-- 
-	<LinearLayout
-	    android:id="@+id/linear_layout_content"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_weight="1"
-	     >
-		
-	 <LinearLayout
-			android:id="@+id/linear_layout_content2"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
-		
 
-					    	    
-	  </LinearLayout> 
--->
-<!-- 
-		<LinearLayout
-			android:id="@+id/linear_layout_content3"
-			android:layout_weight="1"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">		
-		
-
-			
-
-		-->
-		
-<!-- 	</LinearLayout>-->
-	
-	<!-- 
 	<ImageView
-		android:id="@+id/layoutIconedListAdapterImageView02"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:layout_marginLeft="6dip"
-		android:scaleType="fitCenter"
-		android:gravity="center_vertical"/> 
-		-->
-	
-    
-    
+ 		android:id="@+id/image_rightside"
+ 		android:layout_width="wrap_content"
+ 		android:layout_height="wrap_content"
+ 		android:layout_gravity="top"
+ 		android:layout_weight="1"
+ 		android:gravity="center_vertical"
+ 		android:scaleType="fitStart"
+ 		android:src="@drawable/ic_launcher" />    
+    -->
 
 </LinearLayout>
 
