--- a/yaawp/res/layout/list_adapter_hint.xml
+++ b/yaawp/res/layout/list_adapter_hint.xml
@@ -10,7 +10,7 @@
     android:padding="4dip" >
 
 	<ImageView
- 		android:id="@+id/image_leftside"
+ 		android:id="@+id/imageViewIconLeft"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_gravity="top"
@@ -33,7 +33,7 @@
 		    android:orientation="horizontal" >
 
 			<TextView
-			    android:id="@+id/layoutIconedListAdapterTextView01"
+			    android:id="@+id/textViewMajorLeft"
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
 			    android:layout_weight="1"
@@ -45,8 +45,22 @@
 		    	android:textStyle="bold" 
 			    android:text="TextView" />
 
+			<TextView
+			    android:id="@+id/textViewMajorRight"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="0"
+			    android:background="#00000000"
+			    android:ellipsize="none"
+			    android:gravity="right"
+			    android:lines="1"
+			    android:textColor="#ff333333"
+			    android:textSize="18sp"
+			    android:textStyle="bold"
+			    android:text="XXX" />
+			
 			<ImageView
-			    android:id="@+id/layoutIconedListAdapterImageView01"
+			    android:id="@+id/imageViewCancelButton"
 			    android:layout_width="20dp"
 			    android:layout_height="20dp"
 			    android:layout_weight="0"
@@ -57,21 +71,42 @@
 
 		</LinearLayout>
 
-		<TextView
-		    android:id="@+id/layoutIconedListAdapterTextView02"
+		<LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:ellipsize="none"
-		   	android:background="#00000000"
-		    android:textColor="#ff555555"
-		    android:textSize="12sp"
-		    android:text="TextView" />
+		    android:orientation="horizontal" >	
+		    	
+			<TextView
+			    android:id="@+id/textViewMinorLeft"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="1"
+			    android:ellipsize="none"
+			   	android:background="#00000000"
+			    android:textColor="#ff555555"
+			    android:textSize="12sp"
+			    android:text="TextView" />
+			
+			<TextView
+			    android:id="@+id/textViewMinorRight"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="0"
+			    android:background="#00000000"
+			    android:ellipsize="none"
+			    android:gravity="right"
+			    android:lines="1"
+			    android:textColor="#ff333333"
+			    android:textSize="12sp"
+			    android:text="XXX" />
 		
+		</LinearLayout>
+					
 		<include layout="@layout/include_bottom_panel" />
 	</LinearLayout>
 	
  	<ImageView
- 		android:id="@+id/image_rightside"
+ 		android:id="@+id/imageViewIconRight"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_gravity="top"
@@ -80,84 +115,5 @@
  		android:scaleType="fitStart"
  		android:src="@drawable/ic_launcher" />    
     
- 	<!--     
-	<ImageView
- 		android:id="@+id/image_leftside"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="top"
- 		android:layout_weight="0"
- 		android:gravity="center_vertical"
- 		android:scaleType="fitStart"
- 		android:src="@drawable/ic_launcher" />
-    
-    <LinearLayout
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"        
-        android:orientation="vertical"
-        android:layout_weight="0" >
-        
- 
-		<LinearLayout 
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="3dip"
-			android:paddingRight="3dip"
-			android:orientation="horizontal" >
-			
-				<TextView
-					android:id="@+id/layoutIconedListAdapterTextView01"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:lines="1"
-					android:ellipsize="end"
-		    		android:textColor="#ff333333"
-		    		android:background="#00000000"
-		    		android:textSize="18sp"
-		    		android:textStyle="bold"/>
-			
-				<ImageView
-				    android:id="@+id/layoutIconedListAdapterImageView01"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="top"
-				    android:layout_weight="1"
-				    android:gravity="center_vertical"
-				    android:scaleType="fitStart"
-				    android:src="@android:drawable/ic_menu_close_clear_cancel" />
-	 
-		</LinearLayout>
-		<LinearLayout 
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:paddingLeft="3dip"
-			android:paddingRight="3dip"
-			android:orientation="horizontal" >
-				<TextView
-					android:id="@+id/layoutIconedListAdapterTextView02"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:ellipsize="none"
-		   			android:background="#00000000"
-		    		android:textColor="#ff555555"
-		    		android:textSize="12sp" />
-		</LinearLayout> 
-			
-			
-		<include layout="@layout/include_bottom_panel" />	
-	</LinearLayout>						    
-
-	<ImageView
- 		android:id="@+id/image_rightside"
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_gravity="top"
- 		android:layout_weight="1"
- 		android:gravity="center_vertical"
- 		android:scaleType="fitStart"
- 		android:src="@drawable/ic_launcher" />    
-    -->
-
 </LinearLayout>
 
